--- a/src/css/index.css
+++ b/src/css/index.css
@@ -25,7 +25,7 @@ body {
     height: 70vh;
     max-width: 900px; 
     box-shadow: 0 5px 20px var(--color-sombra);
-    border-radius: 5px; 
+    border-radius: 15px; 
     overflow: hidden; 
 }
 
@@ -55,8 +55,6 @@ body {
     opacity: 0.9;
 }
 
-
-
 .login-panel {
     flex: 1; 
     background-color: var(--color-fondo-panel); 
@@ -75,7 +73,6 @@ body {
     letter-spacing: 2px;
 }
 
-
 form {
     width: 100%;
     max-width: 300px; 
@@ -84,16 +81,41 @@ form {
     gap: 30px; 
 }
 
-.input-field, .login-button {
+/* INPUT + ICONOS */
+.input-group {
+    position: relative;
+    width: 100%;
+}
+
+.icon {
+    position: absolute;
+    left: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 1.2em;
+    opacity: 0.9;
+}
+
+.toggle-eye {
+    position: absolute;
+    right: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+/* Campos de entrada */
+.input-field {
     width: 100%;
     padding: 15px;
+    padding-left: 40px; 
     border: none;
     background-color: var(--color-input);
     color: var(--color-texto-claro);
     border-radius: 5px;
     font-size: 1.1em;
-    text-align: center;
-    
+    text-align: left;
     box-shadow: 2px 2px 5px var(--color-sombra); 
 }
 
@@ -102,18 +124,43 @@ form {
     opacity: 0.8; 
 }
 
-
+/* Botón */
 .login-button {
-    cursor: pointer;
+    width: 100%;
+    padding: 15px;
+    border: none;
+    background-color: #6bb16e;
+    color: var(--color-texto-claro);
+    border-radius: 5px;
+    font-size: 1.2em;
     font-weight: bold;
-    transition: background-color 0.3s ease;
+    cursor: pointer;
+    transition: 0.3s ease;
+    box-shadow: 2px 2px 5px var(--color-sombra);
 }
 
 .login-button:hover {
-    background-color: #a89484; 
+    background-color: #78c27c; 
 }
 
+/* Texto de registro */
+.register-text {
+    margin-top: -10px;
+    text-align: center;
+    font-size: 0.9em;
+}
 
+.register-link {
+    color: #9cdb8d;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.register-link:hover {
+    text-decoration: underline;
+}
+
+/* Responsive */
 @media (max-width: 768px) {
     .panel-container {
         width: 90vw;
