--- a/src/css/animales.css
+++ b/src/css/animales.css
@@ -1,4 +1,3 @@
-/* General */
 body {
   margin: 0;
   font-family: Arial, sans-serif;
@@ -57,8 +56,7 @@ body {
   transition: background 0.3s;
 }
 
-.menu-btn:hover,
-.menu-btn.activo {
+.menu-btn:hover, .menu-btn.activo {
   background-color: rgba(114, 158, 100, 0.2);
 }
 
