--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,6 @@
 :root {
-    --color-fondo-panel: rgba(122, 97, 78, 0.95); 
-    --color-input: #9c8470; 
+    --color-fondo-panel: rgba(103, 64, 24, 0.72); 
+    --color-input: rgb(183, 130, 78, 0.45); 
     --color-sombra: rgba(0, 0, 0, 0.4);
     --color-texto-claro: #ffffff; 
 }
