--- a/src/css/registrarse.css
+++ b/src/css/registrarse.css
@@ -1,6 +1,6 @@
 :root {
-    --color-fondo-panel: rgba(122, 97, 78, 0.95);
-    --color-input: #9c8470;
+    --color-fondo-panel: rgba(103, 64, 24, 0.72);
+    --color-input: rgb(183, 130, 78, 0.45 );
     --color-sombra: rgba(0, 0, 0, 0.4);
     --color-texto-claro: #ffffff;
     --color-boton: #6bb16e;
@@ -124,7 +124,6 @@ body {
     background-color: rgba(156, 132, 112, 0.9);
 }
 
-/* Select específico */
 select.input-field {
     cursor: pointer;
     appearance: none;
