--- a/src/css/enfermedad.css
+++ b/src/css/enfermedad.css
@@ -37,7 +37,7 @@ body {
 }
 
 .btn-volver {
-  background-color: #2e7d32;
+  background-color: #6bb16e;
   color: white;
   border: none;
   padding: 8px 12px;
