--- a/src/css/perfil.css
+++ b/src/css/perfil.css
@@ -27,7 +27,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 20px 40px;
-    background: white;
+    background: #6bb16e;
     box-shadow: 0 2px 10px var(--color-sombra);
 }
 
@@ -55,6 +55,7 @@ body {
 
 .btn-volver,
 .btn-logout {
+    
     padding: 10px 20px;
     border: none;
     border-radius: 6px;
