--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -45,6 +45,7 @@ body {
   padding-top: 20px;
   gap: 20px;
   justify-content: space-between;
+  padding-bottom: 20px;
 }
 
 .menu-items {
@@ -190,8 +191,8 @@ body {
   align-items: center; 
   background: #f3f3f3; 
   margin-bottom: 5px; 
-  padding: 8px 12px; 
-  border-radius: 8px; 
+  padding: 4px 4px; 
+  border-radius: 5px; 
 }
 
 .estadisticas-home i { 
